--- a/history.tex
+++ b/history.tex
@@ -10,6 +10,29 @@ contextualization, I separate the topic in two approaches: the history of the te
 and a broad timeline of data-driven sciences highlighting the important figures in each
 age.
 
+\begin{mainbox}{Chapter remarks}
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item The term ``data science'' is recent and has been used to label rather different fields.
+    \item The history of data-driven sciences is long and rich.
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item Understand the history of the term ``data science.''
+    \item Understand the history of data-driven sciences.
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item There is no consensus on the definition of data science.
+    \item There is enough evidence to support data science as a new science.
+  \end{itemize}
+\end{mainbox}
+
 \section{The term ``data science''}
 
 The term data science is recent and has been used to label rather different fields of
@@ -54,6 +77,14 @@ Backus–Naur form (BNF) notation used in describing the syntax for most program
 languages.}.
 His ideas and concepts laid the groundwork for the way we think about programming and data
 processing today.
+
+\begin{mainbox}{Peter Naur}
+  \begin{itemize}
+    \item Danish computer scientist and mathematician.
+    \item Coined the term ``data science'' in the 1960s.
+    \item Proposed the term ``datalogy'' as an alternative to computer science.
+  \end{itemize}
+\end{mainbox}
 
 Naur disliked the term computer science and suggested it be called datalogy or data
 science.  In the 1960s, the subject was practised in Denmark under Peter
@@ -114,6 +145,14 @@ Mining, 7:414–417, 2014. reprinting of 2001 article in ISI Review, Vol 69.}.
 He advocates the expansion of statistics beyond theory into technical areas, significantly
 changing statistics.  Thus, it warranted a new name.
 
+\begin{mainbox}{William Cleveland}
+  \begin{itemize}
+    \item American statistician.
+    \item Proposed the discipline ``data science'' in 2001.
+    \item Proposed the term ``data science'' as the new name for expansion of statistics.
+  \end{itemize}
+\end{mainbox}
+
 As a result, William Swain Cleveland II is credited to define data science as it is most
 used today. He is a highly influential figure in the fields of statistics, machine
 learning, data visualization, data analysis for multidisciplinary studies, and high
@@ -138,6 +177,13 @@ scientist'' being hired and many ``data science degrees'' programs emerging.
 In \cref{chap:data}, I dare to provide a (yet another) definition for the term.  I
 argue that its object of study can be precisely established to support it as a new
 science.
+
+\begin{mainbox}{A new science}
+  \begin{itemize}
+    \item Data science is a new science.
+    \item It is a new science because it has a well-defined object of study.
+  \end{itemize}
+\end{mainbox}
 
 \section{Timeline and historical markers}
 
