Finished definition and explanations.

--- a/data.tex
+++ b/data.tex
@@ -245,11 +245,96 @@ those that we can quantify in some way.  For example, the temperature of a room 
 measurable phenomenon because we can measure it using a thermometer.  The number of
 people in a room is also a measurable phenomenon because we can count them.
 
-Data collection, data storage, data types.
+When we quantify a phenomenon, we perform data collection.  Data collection is the process
+of gathering data on targeted phenomenon in an established systematic way.
+Once we have collected the data, we need to store them.  Data storage is the process of
+storing data in a computer.
+
+To perform those tasks, we need to understand the nature of data.  Data are any piece of
+information that can be digitally stored.  Data can be stored in many different formats.
+For example, we can store data in a spreadsheet, in a database, or in a text file.  We can
+also store data in many different types.  For example, we can store data as numbers,
+strings, or dates.
+
+In data science, studying data types is important because they need to correctly reflect
+the nature of the source phenomenon and be compatible with the computational methods we
+are using.  Data types also restrict the operations we can perform on the data.
+
+The foundation and tools to understand data types come from computer science.  Among the
+subfields, I highlight:
+\begin{itemize}
+  \item Algorithms and data structures: the study of data types and the computational
+    methods to manipulate them.
+  \item Databases: the study of storing and retrieving data.
+\end{itemize}
+
+\begin{mainbox}{Measurable phenomena}
+  \begin{itemize}
+    \item Measurable phenomena are those that we can quantify in some way.
+    \item Data collection is the process of gathering data on targeted phenomenon in an
+      established systematic way.
+    \item Data storage is the process of storing data in a computer.
+    \item Data are any piece of information that can be digitally stored.
+    \item Data can be stored in many different formats.
+    \item Data can be stored in many different types.
+    \item Data types need to correctly reflect the nature of the source phenomenon and be
+      compatible with the computational methods we are using.
+    \item Algorithms, data structures, and databases are important subfields of computer
+      science when studying data collection, data storage, and data types.
+  \end{itemize}
+\end{mainbox}
 
 \subsection{Knowledge extraction}
 
-Data mainpulation, AI and statistics.
+Once we have collected and stored the data, we need to extract knowledge from them.  In
+data science, we use computational methods to extract knowledge from data.  These
+computational methods may come from many different fields.  In particular, I highlight:
+\begin{itemize}
+  \item Statistics: the study of data collection, organization, analysis, interpretation,
+    and presentation.
+  \item Machine learning: the study of computational methods that can automatically learn from data.
+  \item Artificial intelligence: the study of computational methods that can mimic human
+    intelligence.
+\end{itemize}
+
+Also, many other fields contribute to the development of domain-specific computational
+methods to extract knowledge from data.  For example, in the field of biology, we have
+bioinformatics, which is the study of computational methods to analyze biological data.
+Earth sciences have geoinformatics, which is the study of computational methods to
+analyze geographical data.  And so on.
+
+Each method has its own assumptions and limitations.  Thus, we need to understand the
+nature of the methods we are using.  In particular, we need to understand the
+expected input and output of them.  Whenever the available data do not match the
+requirements of the method, we may perform data manipulation\footnote{%
+  It is important to highlight that it is expected that some of the methods assumptions
+  are not fully met.  These methods are usually robust enough to extract valuable
+  knowledge even when data contain imperfections, errors and noise.  However, it is still
+  useful to perform data manipulation to adjust data as much as possible.%
+}.
+
+Data manipulation mainly includes data cleaning, data transformation, and data
+integration. Data cleaning is the process of detecting and correcting (or removing)
+corrupt or inaccurate pieces of data.  Data transformation is the process of converting
+data from one format or type to another.  Data integration is the process of combining
+data from different sources into a single, unified view.
+
+\begin{mainbox}{Knowledge extraction}
+  \begin{itemize}
+    \item We use computational methods to extract knowledge from data.
+    \item Statistics, machine learning, and artificial intelligence are important
+      sciences when studying knowledge extraction.
+    \item Computational methods always have their own assumptions and limitations.
+    \item Data manipulation is the process of adjusting data to the requirements of the
+      computational methods.
+    \item Data cleaning is the process of detecting and correcting (or removing) corrupt
+      or inaccurate pieces of data.
+    \item Data transformation is the process of converting data from one format or type
+      to another.
+    \item Data integration is the process of combining data from different sources into
+      a single, unified view.
+  \end{itemize}
+\end{mainbox}
 
 \section{Structured data}
 
