--- a/references.bib
+++ b/references.bib
@@ -38,3 +38,15 @@
   title={Data science},
   year=2018,
   publisher={The MIT Press}}
+
+@article{Paul1993,
+  author = {Paul F. Velleman and Leland Wilkinson},
+  title = {Nominal, Ordinal, Interval, and Ratio Typologies are Misleading},
+  journal = {The American Statistician},
+  volume = {47},
+  number = {1},
+  pages = {65-72},
+  year = {1993},
+  publisher = {Taylor & Francis},
+  doi = {10.1080/00031305.1993.10475938},
+  URL = {https://www.tandfonline.com/doi/abs/10.1080/00031305.1993.10475938}}
