Small punctuation fixes.

--- a/data.tex
+++ b/data.tex
@@ -67,7 +67,7 @@ under development.  We never know when new ``data-related'' methods will become 
 or a trend.  Also, \textcite{Zumel2019}'s view gives the impression that data science is a
 operations research subfield.  Although I will not try to prove otherwise, I think it will
 be much more useful to see it as an independent field of study.  Obviously, there will be
-many intersections between both areas (and many other areas as well.)  Because of such
+many intersections between both areas (and many other areas as well).  Because of such
 intersections, I will try my best to keep definitions and
 terms standardized throughout chapters, sometimes avoiding popular terms that may generate
 ambiguities or confusion.
@@ -123,8 +123,8 @@ its object of study.  Biology is the study of the life, Earth science studies th
 Earth, and so on.  I argue that data science does not study data itself, but how we can
 ``listen'' them to understand a phenomenon.  The conventional scientific paradigm is
 essentially model-driven: we observe a phenomenon related to the object of study, we
-reason the possible explanation (the model or hypothesis,) and we validate our hypothesis
-(most of the time using data, though.)  In data science, however, we extract the knowledge
+reason the possible explanation (the model or hypothesis), and we validate our hypothesis
+(most of the time using data, though).  In data science, however, we extract the knowledge
 directly and primarily from the data.  The expert knowledge and reasoning may be taken
 into account, but we give data the opportunity to surprise us.  Thus, the objects of the
 study in data science are the computational methods and processes that can extract
