--- a/tasks.tex
+++ b/tasks.tex
@@ -9,7 +9,7 @@ fundamental tasks.
 
 Also, we show examples of different inductive biases and how the main learning algorithms
 work -- symbolic (decision trees), spatial (nearest neighbors), statistical (naïve Bayes
-and Bayesian networks), gradient optimization (neural networks.)
+and Bayesian networks), gradient optimization (neural networks).
 
 \section{Multiclass}
 
