Small text and style fixes.

--- a/data.tex
+++ b/data.tex
@@ -58,13 +58,13 @@ allows you to transform raw data into understanding, insight, and knowledge.''}
 \begin{mainbox}{Hickham's definition}
   \begin{itemize}
     \item Transform raw data into understanding, insight, and knowledge.
-    \item Not necessarily a definition.
+    \item Not necessarily a definition; describes the purpose of data science.
   \end{itemize}
 \end{mainbox}
 
 I find the first definition too restrictive once new methods and techniques are always
 under development.  We never know when new ``data-related'' methods will become obsolete
-or a trend.  Also, \textcite{Zumel2019}'s view gives the impression that data science is a
+or a trend.  Also, \citeauthor{Zumel2019}'s view gives the impression that data science is a
 operations research subfield.  Although I will not try to prove otherwise, I think it will
 be much more useful to see it as an independent field of study.  Obviously, there will be
 many intersections between both areas (and many other areas as well).  Because of such
