--- a/history.tex
+++ b/history.tex
@@ -180,12 +180,16 @@ science.
 
 \begin{mainbox}{A new science}
   \begin{itemize}
-    \item Data science is a new science.
-    \item It is a new science because it has a well-defined object of study.
+    \item Both Naur and Cleveland do not see data science as an independent field of study.
+    \item I argue that data science is not a buzzword.
+    \item Our social and economical reality demands a new science.
   \end{itemize}
 \end{mainbox}
 
 \section{Timeline and historical markers}
+
+\textcite{Kelleher2018} provides an interesting time line of data-driven methods and
+influential figures in the field.  I reproduce it here with some minor changes.
 
 \subsection{Timeline of data collection}
 
