Added PDF metadata.

--- a/main.tex
+++ b/main.tex
@@ -24,12 +24,6 @@
 
 \nonfrenchspacing
 
-\hypersetup{%
-  colorlinks=true,
-  linkcolor=black!70,
-  urlcolor=black!70,
-  citecolor=black!70,}
-
 \begin{document}
 
 \setmathfont{STIXTwoMath}[
@@ -76,6 +70,16 @@
 
 \title{Data science: foundations and practices}
 \author{Filipe A. N. Verri}
+
+\hypersetup{%
+  pdftitle={\thetitle},
+  pdfsubject={Data science},
+  pdfauthor={\theauthor},
+  pdfkeywords={data science, statistics, machine learning, databases},
+  colorlinks=true,
+  linkcolor=black!70,
+  urlcolor=black!70,
+  citecolor=black!70,}
 
 \maketitle
 \thispagestyle{empty}
